<resources>
    <string name="app_name">DDD</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="Login">login</string>
    <string name="SignUp">sign up</string>
    <string name="TroubleLogin">Trouble login</string>
    <string name="ChPassword">Check Password</string>
    <string name="Submit">Submit</string>
    <string name="ChCardNumber">Check Card Number</string>
    <string name="CardNumber">Credit Card Number</string>
    <string name="IdNumber">Tw Id Number</string>
    <string name="BirthDay">Birthday</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Email">Email</string>

    <string-array name="array_names">
        <item>"Anastasia Druzhinina"</item>
        <item>"Andriy Hristyan"</item>
        <item>"Dmitriy Dovbnya"</item>
        <item>"Dmitry Denisenko"</item>
        <item>"Eduard Baev"</item>
        <item>"Iliya Bershadskiy"</item>
        <item>"Kirill Penzykov"</item>
        <item>"Konstantin Rudenko"</item>
        <item>"Oleksii Shliama"</item>
        <item>"Pavel Apisov"</item>
        <item>"Vadim Ooleynik"</item>
    </string-array>
</resources>
